--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-leaflet": "^3.1.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
